--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
 <!-- Start Navigation  -->
+<nav>
 <div class="container">
   <div class="navigationwrap">
 
@@ -69,11 +70,11 @@
 
   </div>
 </div>
-
+</nav>
 
 <!-- End Navigation -->
 <!-- Start First Background -->
-
+<section id="section1">
 <div class="container">
 	<div class="background-image">
 		<div class="first-green-back">
@@ -82,10 +83,22 @@
 		<div class="second-green-back">
 			<p>naukę i zabawę   </p> <i class="fas fa-smile-beam"></i>
 		</div>
+		<div class="wave">
+			<img class="wavephoto"src="assets/background-wave.png">
+		</div>
 	</div>
 </div>
-
+</section>
 <!-- End First Background -->
+
+<!-- Start News -->
+	<section>
+		<div class"container">
+
+		</div>
+
+	</section>
+<!-- End News -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script scr="js/bootstrap.min.js"></script>
