--- a/index.html
+++ b/index.html
@@ -99,6 +99,73 @@
 
 	</section>
 <!-- End News -->
+
+<!-- Start About Us -->
+<section id="about">
+	<div class="container">
+		<div class="yellow-lines-header">
+			<img class="yellow-line" src="assets/yellow-line.png">
+			<h1 class="text-beetwen-lines">Nasze przedszkole</h1>
+			<img class="yellow-line" src="assets/yellow-line.png">
+		</div>
+		<div class="row about-us">
+		<div class="col-5 photowrap">
+			<img class="school-photo"src="assets/school.png">
+			<img class="blue-back"src="assets/blue-back.png">
+		</div>
+		<div class="col-7">
+			<p class="about-text">Miejskie Przedszkole z Oddziałami Integracyjnymi Nr 16 w Płocku jest następcą Państwowego Przedszkola Nr 16, które rozpoczęło swoją działalność w 1974 r.
+				w budynku przy ul. Wolskiego 8 (obecnie ul. Zgliczyńskiego 8)
+				Placówka posiada pięć oddziałów integracyjnych.
+				Pierwsza grupa integracyjna dla dzieci z wadą słuchu zaczęła funkcjonować w 1997 r.
+			</p>
+			<div class="button-wrap">
+			<button type="button" class="btn btn-info button1">Czytaj dalej</button>
+			</button>
+		</div>
+	</div>
+</section>
+<!-- End About Us -->
+
+<!-- Start Team -->
+
+	<div class="container">
+		<div class="kid-background">
+			<div class="white-lines-header">
+				<img class="white-line" src="assets/white-line.png">
+				<h1 class="text-beetwen-lines-team">Kadra<span></h1>
+				<img class="white-line" src="assets/white-line.png">
+			</div>
+			<div class="three-image">
+				<div class="images">
+					<img class="students"src="assets/first-girl.png">
+					<p class="team-desc">Pani<br>Muzyka</p>
+				</div>
+				<div class="images">
+					<img class="students" src="assets/second-girl.png">
+					<p class="team-desc">Pani<br>Muzyka</p>
+				</div>
+				<div class="images">
+					<img class="students" src="assets/first-boy.png">
+					<p class="team-desc">Pan<br>Muzyka</p>
+				</div>
+			</div>
+			<div class="decoy">
+			</div>
+			<div class="filter-wrap">
+				<div class="filter1"></div>
+				<div class="filter2"></div>
+			</div>
+			<div class="wave-up">
+				<img class="wavephoto-up"src="assets/background-wave.png">
+			</div>
+			<div class="wave-down">
+				<img class="wavephoto-up"src="assets/background-wave.png">
+			</div>
+		</div>
+	</div>
+
+<!-- End Team -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script scr="js/bootstrap.min.js"></script>
