--- a/index.html
+++ b/index.html
@@ -132,40 +132,95 @@
 	<div class="container">
 		<div class="kid-background">
 			<div class="white-lines-header">
+				<div class="wrap">
 				<img class="white-line" src="assets/white-line.png">
 				<h1 class="text-beetwen-lines-team">Kadra<span></h1>
 				<img class="white-line" src="assets/white-line.png">
+				</div>
+
+				<p class="p-under-header">Wykwalifikowani naczyciele to gwaracja zajęć i zabaw</br>
+					wspierających rozwój Twojego dziecka</p>
+
 			</div>
+
 			<div class="three-image">
+				<div class="three-image-wrap">
 				<div class="images">
 					<img class="students"src="assets/first-girl.png">
-					<p class="team-desc">Pani<br>Muzyka</p>
+					<p class="team-desc">Anna nowak<br><span class="work-text">muzyka</span></p>
 				</div>
 				<div class="images">
 					<img class="students" src="assets/second-girl.png">
-					<p class="team-desc">Pani<br>Muzyka</p>
+					<p class="team-desc">Janina Kowalska<br><span class="work-text">nauczyciel</span></p>
 				</div>
 				<div class="images">
 					<img class="students" src="assets/first-boy.png">
-					<p class="team-desc">Pan<br>Muzyka</p>
+					<p class="team-desc">Jan Adamski<br><span class="work-text">opiekun</span></p>
 				</div>
 			</div>
-			<div class="decoy">
+			<div class="whole-team-text">
+				<a class="whole-team-text-link"href="#"><ins>Zobacz pełną kadrę</ins></a>
 			</div>
+		</div>
 			<div class="filter-wrap">
 				<div class="filter1"></div>
 				<div class="filter2"></div>
 			</div>
 			<div class="wave-up">
-				<img class="wavephoto-up"src="assets/background-wave.png">
+				<img class="wavephoto-up"src="assets/wave-down.png">
 			</div>
 			<div class="wave-down">
-				<img class="wavephoto-up"src="assets/background-wave.png">
+				<img class="wavephoto-up"src="assets/wave-up.png">
+			</div>
+			<div class="empty-div">
+
 			</div>
 		</div>
 	</div>
 
 <!-- End Team -->
+
+<!-- Start Groups -->
+	<div class="container">
+		<div class="fun-background">
+
+			<div class="groups-header-string">
+				<div class="zigzak-string">
+					<img class="yellow-line" src="assets/yellow-line.png">
+					<h1 class="text-beetwen-lines">Nasze grupy</h1>
+					<img class="yellow-line" src="assets/yellow-line.png">
+				</div>
+				<p class="text-under-zigzak">Szeroki zakres grup pozwala dzieciom na uczestniczenie w zabawach i zajęciach<br>
+					zawsze dostosowanych do ich wieku</p>
+			</div>
+
+			<div class="groups-level">
+				<div class="level-photo1 dupa">
+
+
+				</div>
+				<div class="level-photo2 dupa">
+
+
+				</div>
+				<div class="level-photo3 dupa">
+
+
+				</div>
+				<div class="level-photo4 dupa">
+
+
+				</div>
+				<div class="level-photo5 dupa">
+
+
+				</div>
+
+			</div>
+
+		</div>
+	</div>
+<!-- End Groups -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script scr="js/bootstrap.min.js"></script>
