--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>HTML</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/css.css">
 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -195,25 +196,46 @@
 			</div>
 
 			<div class="groups-level">
-				<div class="level-photo1 dupa">
 
-
+				<div class="level-photo1 dlc">
+					<div class="inside-color">
+						<img class="animal-icon" src="assets/dwarf.png">
+						<p class="animal-header">KRASNALE</p>
+						<p class="animal-age">3 latki</p>
+					</div>
 				</div>
-				<div class="level-photo2 dupa">
 
-
+				<div class="level-photo2 dlc">
+					<div class="inside-color">
+						<img class="animal-icon" src="assets/bug.png">
+						<p class="animal-header">BIEDRONKI</p>
+						<p class="animal-age">4 latki</p>
+					</div>
 				</div>
-				<div class="level-photo3 dupa">
 
-
+				<div class="level-photo3 dlc">
+					<div class="inside-color">
+						<img class="animal-icon" src="assets/squirrel.png">
+						<p class="animal-header">WIEWIÓRKI</p>
+						<p class="animal-age">4/5 latki</p>
+					</div>
 				</div>
-				<div class="level-photo4 dupa">
 
-
+				<div class="level-photo4 dlc">
+					<div class="inside-color">
+						<img class="animal-icon" src="assets/rabbit.png">
+						<p class="animal-header">ZAJĄCE</p>
+						<p class="animal-age">5/6 latki</p>
+					</div>
 				</div>
-				<div class="level-photo5 dupa">
 
+				<div class="level-photo5 dlc">
+					<div class="inside-color">
+						<img class="animal-icon" src="assets/elf.png">
+						<p class="animal-header">PAJACE</p>
+						<p class="animal-age">6 latki</p>
 
+					</div>
 				</div>
 
 			</div>
@@ -221,6 +243,61 @@
 		</div>
 	</div>
 <!-- End Groups -->
+
+<!-- Start Footer -->
+
+	<div class="container costam">
+		<div class="footer-background">
+
+			<div class="menu-footer">
+				<ul>
+            <li class="header-footer">MENU</li>
+            <li class="footer-li"><a href="#">Start</a></li>
+            <li class="footer-li"><a href="#">O nas</a></li>
+            <li class="footer-li"><a href="#">Nasze grupy</a></li>
+            <li class="footer-li"><a href="#">Galeria</a></li>
+            <li class="footer-li"><a href="#">Dla rodziców</a></li>
+            <li class="footer-li"><a href="#">Kontakt</a></li>
+
+          </ul>
+			</div>
+			<div class="about-school-footer">
+				<ul>
+						<li id="footer-blank"><a href="#">blank</a></li>
+						<li class="footer-li"><a href="#">Informacje o opłatach</a></li>
+						<li class="footer-li"><a href="#">Status przedszkola</a></li>
+						<li class="footer-li"><a href="#">RODO</a></li>
+						<li id="footer-blank"><a href="#">blank</a></li>
+						<li id="footer-blank"><a href="#">blank</a></li>
+						<li id="footer-blank"><a href="#">blank</a></li>
+				</ul>
+			</div>
+			<div class="contact-footer">
+				<ul>
+						<li class="header-footer">KONTAKT</li>
+  					<li class="footer-li"><a><i class="fa fa-phone fa-1x "></i>24 367 19 59</a></li>
+            <li class="footer-li"><a><i class="fa fa-envelope fa-1x"></i>kontakt@przedszkole.pl</a></li>
+            <li class="footer-li"><a><i class="fa fa-home fa-1x "></i>ul.Zgliczyńskiego 8  </a></li>
+						<li id="footer-blank"><a href="#">blank</a></li>
+						<li id="footer-blank"><a href="#">blank</a></li>
+						<li id="footer-blank"><a href="#">blank</a></li>
+        </ul>
+			</div>
+			<div class="logo-footer">
+				<img class="logo-footer-img"src="assets/white-logo.png">
+				<p id="text-under-logo-footer">Miejsce Przedszkole<br> z Oddziałami Integracyjnymi nr 16 w Płocku</p>
+			</div>
+
+		</div>
+	</div>
+<!-- End Footer -->
+<!-- Start Under Footer -->
+	<div class="container">
+		<div class="under-footer">
+			<p id="text-under-footer">&copy; 2019 Miejsce Przedszkole nr 16 | Projekt i realizacja:Strony internetowe Płock - Blacrea.pl</p>
+		</div>
+	</div>
+<!-- End Under Footer -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script scr="js/bootstrap.min.js"></script>
