--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>HTML</title>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/css.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
+<link rel="stylesheet" type="text/css" href="css/css.css">
 
 
 </head>
@@ -85,7 +87,7 @@
 			<p>naukę i zabawę   </p> <i class="fas fa-smile-beam"></i>
 		</div>
 		<div class="wave">
-			<img class="wavephoto"src="assets/background-wave.png">
+			<img class="wavephoto"src="assets/wave-up.png">
 		</div>
 	</div>
 </div>
@@ -93,12 +95,72 @@
 <!-- End First Background -->
 
 <!-- Start News -->
-	<section>
-		<div class"container">
+<section id="section-news">
+	<div class="container">
+		<div class="owl-carousel ">
 
+    	<div class="news-wrap">
+				<p class="data-color-pink">08.07.2019</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				 Nam massa odio, pulvinar vitae risus at, luctus scelerisquenim.
+				Mauris pellentesque, velit in vestibulum pellentesque, e
+			rat nulla ultricies purus, et dignissim justo ante non risus
+			<div class="pink-line"></div>
+			<div class="more-wrap">
+				<a href="#" class="more">Więcej>></a>
+			</div>
 		</div>
 
-	</section>
+		<div class="news-wrap">
+			<p class="data-color-blue">09.07.2019</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			 Nam massa odio, pulvinar vitae risus at, luctus scelerisquenim.
+			Mauris pellentesque, velit in vestibulum pellentesque, e
+		rat nulla ultricies purus, et dignissim justo ante non risus
+		<div class="blue-line"></div>
+		<div class="more-wrap">
+		<a href="#"class="more2">Więcej>></a>
+		</div>
+	</div>
+
+	<div class="news-wrap">
+		<p class="data-color-green">10.07.2019</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		 Nam massa odio, pulvinar vitae risus at, luctus scelerisquenim.
+		Mauris pellentesque, velit in vestibulum pellentesque, e
+	rat nulla ultricies purus, et dignissim justo ante non risus
+	<div class="green-line"></div>
+	<div class="more-wrap">
+		<a href="#"class="more3">Więcej>></a>
+	</div>
+</div>
+
+<div class="news-wrap">
+	<p class="data-color-yellow">11.07.2019</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	 Nam massa odio, pulvinar vitae risus at, luctus scelerisquenim.
+	Mauris pellentesque, velit in vestibulum pellentesque, e
+rat nulla ultricies purus, et dignissim justo ante non risus
+<div class="yelllow-line"></div>
+<div class="more-wrap">
+	<a href="#" class="more4">Więcej>></a>
+</div>
+</div>
+
+<div class="news-wrap">
+	<p class="data-color-orange">12.07.2019</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	 Nam massa odio, pulvinar vitae risus at, luctus scelerisquenim.
+	Mauris pellentesque, velit in vestibulum pellentesque, e
+rat nulla ultricies purus, et dignissim justo ante non risus
+<div class="orange-line"></div>
+<div class="more-wrap">
+	<a href="#" class="more5">Więcej>></a>
+</div>
+</div>
+
+	</div>
+</section>
 <!-- End News -->
 
 <!-- Start About Us -->
@@ -298,9 +360,27 @@
 		</div>
 	</div>
 <!-- End Under Footer -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script scr="js/bootstrap.min.js"></script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"type="text/javascript"> </script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js" type="text/ecmascript"> </script>
+	<script type="text/javascript">
+	$('.owl-carousel').owlCarousel({
+	loop:true,
+	margin:50,
+	nav:false,
+	responsive:{
+			0:{
+					items:1
+			},
+			600:{
+					items:2
+			},
+			1000:{
+					items:3
+			}
+	}
+})
+	</script>
 </body>
 
 </html>
