--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 <div class="container">
 	<div class="background-image">
 		<div class="first-green-back">
-			<p>odkrywamy z dziećmi świat poprzez </p>
+			<p class="text-green-div">odkrywamy z dziećmi świat poprzez </p>
 		</div>
 		<div class="second-green-back">
-			<p>naukę i zabawę   </p> <i class="fas fa-smile-beam"></i>
+			<p class="text-green-div">naukę i zabawę   </p> <i class="fas fa-smile-beam"></i>
 		</div>
 		<div class="wave">
 			<img class="wavephoto"src="assets/wave-up.png">
@@ -181,11 +181,11 @@ rat nulla ultricies purus, et dignissim justo ante non risus
 			<img class="yellow-line" src="assets/yellow-line.png">
 		</div>
 		<div class="row about-us">
-		<div class="col-5 photowrap">
+		<div class="col-lg-5 photowrap">
 			<img class="school-photo"src="assets/school.png">
 			<img class="blue-back"src="assets/blue-back.png">
 		</div>
-		<div class="col-7">
+		<div class="col-lg-7">
 			<p class="about-text">Miejskie Przedszkole z Oddziałami Integracyjnymi Nr 16 w Płocku jest następcą Państwowego Przedszkola Nr 16, które rozpoczęło swoją działalność w 1974 r.
 				w budynku przy ul. Wolskiego 8 (obecnie ul. Zgliczyńskiego 8)
 				Placówka posiada pięć oddziałów integracyjnych.
@@ -217,7 +217,7 @@ rat nulla ultricies purus, et dignissim justo ante non risus
 
 			<div class="three-image">
 				<div class="three-image-wrap">
-				<div class="images">
+				<div class="images ">
 					<img class="students"src="assets/first-girl.png">
 					<p class="team-desc">Anna nowak<br><span class="work-text">muzyka</span></p>
 				</div>
@@ -225,7 +225,7 @@ rat nulla ultricies purus, et dignissim justo ante non risus
 					<img class="students" src="assets/second-girl.png">
 					<p class="team-desc">Janina Kowalska<br><span class="work-text">nauczyciel</span></p>
 				</div>
-				<div class="images">
+				<div class="images ">
 					<img class="students" src="assets/first-boy.png">
 					<p class="team-desc">Jan Adamski<br><span class="work-text">opiekun</span></p>
 				</div>
@@ -382,8 +382,8 @@ rat nulla ultricies purus, et dignissim justo ante non risus
 			0:{
 					items:1
 			},
-			600:{
-					items:2
+			400:{
+					items:1
 			},
 			1000:{
 					items:3
