--- a/index.html
+++ b/index.html
@@ -352,8 +352,10 @@ rat nulla ultricies purus, et dignissim justo ante non risus
         </ul>
 			</div>
 			<div class="logo-footer">
-				<img class="logo-footer-img"src="assets/white-logo.png">
-				<p id="text-under-logo-footer">Miejsce Przedszkole<br> z Oddziałami Integracyjnymi nr 16 w Płocku</p>
+				<ul>
+				<li class="footer-li">	<img class="logo-footer-img"src="assets/white-logo.png"></li>
+				<li class="footer-li">	<p id="text-under-logo-footer">Miejsce Przedszkole<br> z Oddziałami Integracyjnymi nr 16 w Płocku</p></li>
+				</ul>
 			</div>
 
 		</div>
