--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
 						<a class="icon-text" href="#">Kontakt</a>
 					</div>
 				</li>
-				<li class="hamburger">
-					<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    				<i class="fa fa-bars"></i>
-  				</a>
-				</li>
+
 
 
 
@@ -193,6 +189,7 @@ rat nulla ultricies purus, et dignissim justo ante non risus
 			</button>
 		</div>
 	</div>
+</div>
 </section>
 <!-- End About Us -->
 
@@ -382,7 +379,10 @@ rat nulla ultricies purus, et dignissim justo ante non risus
 					items:1
 			},
 			400:{
-					items:1
+					items:2
+			},
+			992:{
+					items:2
 			},
 			1000:{
 					items:3
