--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ rat nulla ultricies purus, et dignissim justo ante non risus
 			</div>
 			<div class="about-school-footer">
 				<ul>
-						<li id="footer-blank"><a href="#">blank</a></li>
+						<li class="header-footer"id="footer-blank"><a href="#">blank</a></li>
 						<li class="footer-li"><a href="#">Informacje o opłatach</a></li>
 						<li class="footer-li"><a href="#">Status przedszkola</a></li>
 						<li class="footer-li"><a href="#">RODO</a></li>
