--- a/add-gallery.html
+++ b/add-gallery.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>NEWS</title>
+	<title>Dodatkowa galeria</title>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-
+<link rel="stylesheet" type="text/css" href="css/component.css">
 <link rel="stylesheet" type="text/css" href="css/css.css">
 
 
@@ -87,84 +87,224 @@
 
 
 <!-- End Navigation -->
-<!-- Start First Background -->
-<section id="section1">
-<div class="container">
-	<div class="about-kinder-background">
-		<div class="background-string">
-			<img class="about-kinder-lines" src="assets/white-line.png">
-			<h1 class="text-beetwen-lines-team">Aktualności</h1>
-			<img class="about-kinder-lines" src="assets/white-line.png">
-		</div>
-		<div class="about-kinder-filter"></div>
 
-		<div class="wave">
-			<img class="wavephoto"src="assets/wave-up.png">
+
+<section id="add-news-margin">
+<div class="container">
+	<div class="add-news-gallery-header">
+		<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum</h2>
+		<div class="blue-underline"></div>
+		<div class="data-gallery-icon">
+			<i class="far fa-calendar-alt"></i>
+			<p>06/06/1201</p>
 		</div>
 	</div>
-</div>
+	<div class="main-center-photo">
+		<img id="one-big-one-shot"src="assets/zgallery1.jpg">
+	</div>
+	<div class="whole-gallery-wrap add-news-whole-wrap">
+
+		<div id="grid-gallery" class="grid-gallery">
+			<section class="grid-wrap">
+				<ul class="grid">
+					<li class="grid-sizer"></li><!-- for Masonry column width -->
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery1.jpg" alt="img01"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery2.jpg" alt="img02"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery3.jpg" alt="img03"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery4.jpg" alt="img04"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery5.jpg" alt="img05"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery6.jpg" alt="img06"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery7.jpg" alt="img06"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery8.jpg" alt="img06"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery9.jpg" alt="img06"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery10.jpg" alt="img06"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery11.jpg" alt="img06"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery12.jpg" alt="img06"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery13.jpg" alt="img06"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery14.jpg" alt="img06"/>
+
+						</figure>
+					</li>
+					<li>
+						<figure>
+							<img class="pictures-gallery"src="assets/zgallery15.jpg" alt="img06"/>
+
+						</figure>
+					</li>
+				</ul>
+			</section><!-- // grid-wrap -->
+			<section class="slideshow">
+				<ul>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery1.jpg" alt="img01"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery2.jpg" alt="img02"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery3.jpg"alt="img03"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery4.jpg" alt="img04"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery5.jpg" alt="img05"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery6.jpg" alt="img06"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery7.jpg" alt="img06"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery8.jpg" alt="img06"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery9.jpg" alt="img06"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery10.jpg" alt="img06"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery11.jpg" alt="img06"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery12.jpg" alt="img06"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery13.jpg" alt="img06"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery14.jpg" alt="img06"/>
+						</figure>
+					</li>
+					<li>
+						<figure>
+
+							<img class="pictures-gallery-big"src="assets/zgallery15.jpg" alt="img06"/>
+						</figure>
+					</li>
+				</ul>
+				<nav>
+					<span class="icon nav-prev"></span>
+					<span class="icon nav-next"></span>
+					<span class="icon nav-close"></span>
+				</nav>
+
+			</section><!-- // slideshow -->
+			<div class="clearfix"></div>
+		</div><!-- // grid-gallery -->
+
+	</div>
 </section>
-<!-- Start Footer -->
-<div class="container">
-	<div class="whole-news-wrapper">
-		<div class="single-news-wrapper">
-			<div class="photo-part">
-				<img class="news-picture"src="assets/kid-back.png">
-			</div>
-			<div class="text-part">
-				<h3 id="first-h">Lorem ipsum dolor sit amet, consectetur</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum imperdiet tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer nec odio egestas, tempus risus nec, mollis dui. Vestibulum elit turpis, elementum vitae est eu, eleifend iaculis massa. Suspendisse fringilla</p>
-				<hr>
-				<div class="data-more">
-					<div class="data-wrapper">
-					<i class="far fa-calendar-alt"></i>
-					<p>06/06/1201</p>
-					</div>
-					<a href="#">Czytaj dalej>></a>
-				</div>
-			</div>
-		</div>
-		<div class="single-news-wrapper">
-			<div class="photo-part">
-				<img class="news-picture"src="assets/kid-back.png">
-			</div>
-			<div class="text-part">
-				<h3 id="second-h">Lorem ipsum dolor sit amet, consectetur</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum imperdiet tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer nec odio egestas, tempus risus nec, mollis dui. Vestibulum elit turpis, elementum vitae est eu, eleifend iaculis massa. Suspendisse fringilla</p>
-				<hr>
-				<div class="data-more">
-					<div class="data-wrapper">
-					<i class="far fa-calendar-alt"></i>
-					<p>06/06/1201</p>
-					</div>
-					<a href="#">Czytaj dalej>></a>
-				</div>
-			</div>
-		</div>
-		<div class="single-news-wrapper">
-			<div class="photo-part">
-				<img class="news-picture"src="assets/kid-back.png">
-			</div>
-			<div class="text-part">
-				<h3 id="third-h">Lorem ipsum dolor sit amet, consectetur</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum imperdiet tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer nec odio egestas, tempus risus nec, mollis dui. Vestibulum elit turpis, elementum vitae est eu, eleifend iaculis massa. Suspendisse fringilla</p>
-				<hr>
-				<div class="data-more">
-					<div class="data-wrapper">
-					<i class="far fa-calendar-alt"></i>
-					<p>06/06/1201</p>
-					</div>
-					<a href="#">Czytaj dalej>></a>
-				</div>
-			</div>
-		</div>
-		<div class="old-art-link">
-			<a href="#">Starsze artykuły</a>
-
-		</div>
-	</div>
-</div>
-
 
 	<div class="container costam">
 		<div class="footer-background">
@@ -223,6 +363,14 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"type="text/javascript"> </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js" type="text/ecmascript"> </script>
+	<script src="js/imagesloaded.pkgd.min.js"></script>
+<script src="js/masonry.pkgd.min.js"></script>
+<script src="js/classie.js"></script>
+<script src="js/modernizr.custom.js"></script>
+<script src="js/cbpGridGallery.js"></script>
+<script>
+	new CBPGridGallery( document.getElementById( 'grid-gallery' ) );
+</script>
 	<script type="text/javascript">
 	$('.owl-carousel').owlCarousel({
 	loop:true,
